minor fixes and onboard admin scripts for submitting topologies